--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>mmdbUnitTestDemo</groupId>
-  <artifactId>UnitTestDemo</artifactId>
+  <groupId>Maven_example</groupId>
+  <artifactId>Maven_example</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>UnitTestDemo</name>
+  <name>Maven_example</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -18,11 +18,11 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
-
+  
     <build>
         <plugins>
             <plugin>
@@ -44,6 +44,6 @@
                 </executions>
             </plugin>
         </plugins>
-    </build>
-    
+    </build>  
+  
 </project>
